WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94960
[BlackBerry] Debug assertion fires in BackingStorePrivate::renderJob()
https://bugs.webkit.org/show_bug.cgi?id=94960
Summary
[BlackBerry] Debug assertion fires in BackingStorePrivate::renderJob()
Liam Quinn
Reported
2012-08-24 11:16:25 PDT
I'm hitting this debug assertion when starting the Browser after grabbing the fix for PR 94837: Program terminated with signal 11, Segmentation fault. #0 0x795aeae2 in BlackBerry::WebKit::BackingStorePrivate::renderJob (this=0x79a1efe8) at /home/lquinn/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:517 517 ASSERT(shouldPerformRenderJobs()); In talking to Adam Treat, he indicated that this assertion is no longer valid and should be replaced with an early return.
Attachments
Patch
(1.42 KB, patch)
2012-08-24 11:40 PDT
,
Liam Quinn
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Liam Quinn
Comment 1
2012-08-24 11:40:31 PDT
Created
attachment 160463
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-24 12:19:06 PDT
Comment on
attachment 160463
[details]
Patch Clearing flags on attachment: 160463 Committed
r126612
: <
http://trac.webkit.org/changeset/126612
>
WebKit Review Bot
Comment 3
2012-08-24 12:19:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug