[BlackBerry] Debug assertion fires in BackingStorePrivate::renderJob() https://bugs.webkit.org/show_bug.cgi?id=94960

Patch by Liam Quinn <lquinn@rim.com> on 2012-08-24
Reviewed by Adam Treat.

Change the assertion into an early return as recommended by Adam Treat.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::renderJob):

Canonical link: https://commits.webkit.org/112825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126612 268f45cc-cd09-0410-ab3c-d52691b4dbfc